--- a/less/hero.less
+++ b/less/hero.less
@@ -8,15 +8,8 @@
   h2{
     border: 1px dashed black;
   }
-  h3{
-    border: 1px dashed black;
-  }
-  .fight {
-    border: 1px solid black;
-    .secondaryButtonStyle;
-  }
-  .run {
-    border: 1px solid black;
+
+  .character-action {
     .secondaryButtonStyle;
   }
 }
