--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,7 +13,7 @@
         background-color: @darkblue;
         margin: 20px;
         padding: 20px;
-        text-decoration: none; 
+        text-decoration: none;
 
       &:hover{
         background-color: @lightertintofdarkblue;
@@ -42,10 +42,30 @@
     background-color: @lightertintofdarkblue;
     cursor: pointer;
   }
-  a{
+  h4{
     font-size: 2.4rem;
     font-weight: 600;
-    text-decoration: none;
+    color: @main-font-color;
+
+  }
+}
+
+.tertiaryButtonStyle {
+  width: 80%;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 2px 2px;
+  background-color: @darkblue;
+  margin: 20px;
+  padding: 10px;
+
+  &:hover{
+    background-color: @lightertintofdarkblue;
+    cursor: pointer;
+  }
+  h4{
+    font-size: 2.4rem;
+    font-weight: 600;
     color: @main-font-color;
 
   }
