--- a/less/villain.less
+++ b/less/villain.less
@@ -5,18 +5,18 @@
     height: 300px;
     padding: 20px;
   }
-  h2{
-    border: 1px dashed black;
-  }
-  h3{
-    border: 1px dashed black;
-  }
-  .fight {
-    border: 1px solid black;
+
+.start-fight{
+  .tertiaryButtonStyle;
+}
+
+
+  .character-action {
     .secondaryButtonStyle;
-  }
-  .run {
-    border: 1px solid black;
-    .secondaryButtonStyle;
-  }
+}
+
+.hidden {
+  display: none;
+}
+
 }
