--- a/less/global.less
+++ b/less/global.less
@@ -54,4 +54,21 @@ p {
   padding: 20px;
   .flex(center, flex-start);
   text-align: center;
+  .fight-image{
+    border: 1px dashed yellow;
+    width: 80%;
+    height: 300px;
+    padding: 20px;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+  h2{
+    border: 1px dashed black;
+  }
+
+  .character-action {
+    .secondaryButtonStyle;
+  }
 }
