--- a/less/global.less
+++ b/less/global.less
@@ -48,27 +48,44 @@ p {
   background-color: @wild-sand;
   max-width: 800px;
   width: 80%;
-  height: 600px;
   margin: 60px auto;
   border: 2px dotted black;
   padding: 20px;
   .flex(center, flex-start);
   text-align: center;
+
+  @media @phone {
+    .flex(center, center);
+    flex-direction: column;
+  }
   .fight-image{
-    border: 1px dashed yellow;
-    width: 80%;
-    height: 300px;
-    padding: 20px;
     img{
-      width: 100%;
+      width: 60%;
       height: auto;
+      padding: 10px;
     }
   }
-  h2{
-    border: 1px dashed black;
+  h3{
+    font-size: 2.6rem;
+    font-weight: 800;
   }
-
   .character-action {
     .secondaryButtonStyle;
+    align-self: flex-end;
+
+    @media @phone {
+      align-self: center;
+      width: 80%;
+      margin: 10px;
+    }
+
+
+    }
+    .heal{
+      @media @phone {
+      order: 1;
+      }
   }
+
+
 }
