--- a/less/global.less
+++ b/less/global.less
@@ -48,14 +48,14 @@ p {
   background-color: @wild-sand;
   max-width: 800px;
   width: 80%;
-  margin: 60px auto;
+  margin: 10% auto;
   border: 2px dotted black;
   padding: 20px;
   .flex(center, flex-start);
   text-align: center;
 
   @media @phone {
-    margin: 5%; 
+    margin: 5%;
     .flex(center, center);
     flex-direction: column;
   }
