--- a/css/index.css
+++ b/css/index.css
@@ -228,7 +228,7 @@ p {
   background-color: #F6F6F6;
   max-width: 800px;
   width: 80%;
-  margin: 60px auto;
+  margin: 10% auto;
   border: 2px dotted black;
   padding: 20px;
   display: flex;
