--- a/less/global.less
+++ b/less/global.less
@@ -55,7 +55,7 @@ p {
   text-align: center;
 
   @media @phone {
-    margin: 5%;
+    margin: 5%, auto;
     .flex(center, center);
     flex-direction: column;
   }
