--- a/css/index.css
+++ b/css/index.css
@@ -253,8 +253,8 @@ p {
   padding: 10px;
 }
 .game-container h3 {
-  font-size: 2.6rem;
-  font-weight: 800;
+  font-size: 3.6rem;
+  font-weight: 650;
 }
 .game-container .character-action {
   width: 30%;
@@ -281,6 +281,9 @@ p {
     width: 80%;
     margin: 10px;
     padding: 25px;
+  }
+  .game-container .character-action h4 {
+    font-size: 4rem;
   }
 }
 @media ( max-width: 400px ) {
