--- a/less/global.less
+++ b/less/global.less
@@ -67,8 +67,8 @@ p {
     }
   }
   h3{
-    font-size: 2.6rem;
-    font-weight: 800;
+    font-size: 3.6rem;
+    font-weight: 650;
   }
   .character-action {
     .secondaryButtonStyle;
@@ -78,7 +78,10 @@ p {
       align-self: center;
       width: 80%;
       margin: 10px;
-      padding: 25px; 
+      padding: 25px;
+      h4{
+        font-size: 4rem;
+      }
     }
 
 
