--- a/css/index.css
+++ b/css/index.css
@@ -280,10 +280,13 @@ p {
     align-self: center;
     width: 80%;
     margin: 10px;
-    padding: 25px;
+    padding: 15px;
   }
   .game-container .character-action h4 {
     font-size: 4rem;
+  }
+  .game-container .character-action:hover {
+    background-color: #547980;
   }
 }
 @media ( max-width: 400px ) {
