--- a/less/global.less
+++ b/less/global.less
@@ -78,9 +78,13 @@ p {
       align-self: center;
       width: 80%;
       margin: 10px;
-      padding: 25px;
+      padding: 15px;
       h4{
         font-size: 4rem;
+      }
+
+      &:hover{
+        background-color: @darkblue; 
       }
     }
 
