--- a/less/global.less
+++ b/less/global.less
@@ -56,12 +56,12 @@ p {
 }
 
 .game-container {
-  background-color: @offwhite;
+  background-color: @wild-sand;
   max-width: 800px;
-  width: 90%;
-  height: 80%;
-  margin: 3% auto;
   border: 2px dotted black;
+  width: 90%;
+  min-height: 525px;
+  margin: auto;
   padding: 20px;
   .flex(center, flex-start);
   text-align: center;
@@ -71,7 +71,6 @@ p {
     .flex(center, center);
     flex-direction: column;
     padding: 5px;
-    min-height: 600px;
   }
   .fight-image{
     img{
