--- a/less/global.less
+++ b/less/global.less
@@ -114,6 +114,15 @@ p {
       order: 1;
       }
   }
+.restart {
+  text-decoration: none; 
+}
+  .start-over {
+    .tertiaryButtonStyle;
+  }
 
+  .hidden {
+    display: none;
+  }
 
 }
