--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,7 +6,8 @@
 }
 
 .mainButtonStyle{
-        width: 30%;
+        width: 50%;
+        max-width: 250px;
         border: 2px solid black;
         border-radius: 10px;
         box-shadow: 2px 5px @main-font-color;
@@ -51,7 +52,7 @@
 }
 
 .tertiaryButtonStyle {
-  width: 80%;
+  width: 90%;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 2px;
@@ -67,6 +68,7 @@
     font-size: 2.4rem;
     font-weight: 600;
     color: @main-font-color;
+    text-decoration: none;
 
   }
 }
