message tweaks, trying to fix restart button styles.

--- a/less/global.less
+++ b/less/global.less
@@ -18,14 +18,15 @@ h2, h3, h4, h5, p {
   color: @header-font-color;
 }
 h1{
-  font-family: 'Lora', serif;
+  font-family: 'Amatic SC', cursive;
   color: @header-font-color;
-  font-size: 6rem;
+  font-size: 8rem;
 }
 
 h2 {
-  font-family: 'Lora', serif;
-  font-size: 3rem;
+  font-family: 'Amatic SC', cursive;
+  font-size: 5rem;
+  font-weight: 800;
 }
 
 h3 {
@@ -115,11 +116,16 @@ p {
       }
   }
 .restart {
-  text-decoration: none; 
+  align-self: flex-end;
+  text-decoration: none;
+
 }
-  .start-over {
+
+.start-over {
     .tertiaryButtonStyle;
-  }
+    text-decoration: none; 
+}
+
 
   .hidden {
     display: none;
