--- a/less/mixins.less
+++ b/less/mixins.less
@@ -55,20 +55,22 @@
   width: 90%;
   border: 1px solid black;
   border-radius: 10px;
-  box-shadow: 2px 2px;
+  box-shadow: 2px 2px @main-font-color;
   background-color: @darkblue;
   margin: 20px;
   padding: 10px;
+  text-decoration: none;
 
   &:hover{
     background-color: @lightertintofdarkblue;
     cursor: pointer;
   }
-  h4{
-    font-size: 2.4rem;
-    font-weight: 600;
-    color: @main-font-color;
-    text-decoration: none;
+    h4{
+      font-size: 2.4rem;
+      font-weight: 600;
+      color: @main-font-color;
+      text-decoration: none;
 
-  }
+    }
+
 }
