--- a/css/index.css
+++ b/css/index.css
@@ -41,10 +41,11 @@
   width: 90%;
   border: 1px solid black;
   border-radius: 10px;
-  box-shadow: 2px 2px;
+  box-shadow: 2px 2px #282828;
   background-color: #547980;
   margin: 20px;
   padding: 10px;
+  text-decoration: none;
 }
 .tertiaryButtonStyle:hover {
   background-color: #87a1a6;
@@ -205,13 +206,14 @@ p {
   color: #22283A;
 }
 h1 {
-  font-family: 'Lora', serif;
+  font-family: 'Amatic SC', cursive;
   color: #22283A;
-  font-size: 6rem;
+  font-size: 8rem;
 }
 h2 {
-  font-family: 'Lora', serif;
-  font-size: 3rem;
+  font-family: 'Amatic SC', cursive;
+  font-size: 5rem;
+  font-weight: 800;
 }
 h3 {
   font-size: 3.2rem;
@@ -316,16 +318,18 @@ p {
   }
 }
 .game-container .restart {
+  align-self: flex-end;
   text-decoration: none;
 }
 .game-container .start-over {
   width: 90%;
   border: 1px solid black;
   border-radius: 10px;
-  box-shadow: 2px 2px;
+  box-shadow: 2px 2px #282828;
   background-color: #547980;
   margin: 20px;
   padding: 10px;
+  text-decoration: none;
 }
 .game-container .start-over:hover {
   background-color: #87a1a6;
