--- a/less/mixins.less
+++ b/less/mixins.less
@@ -52,13 +52,13 @@
 }
 
 .tertiaryButtonStyle {
-  width: 90%;
+  width: 200px;
   border: 1px solid black;
   border-radius: 10px;
   box-shadow: 2px 2px @main-font-color;
   background-color: @darkblue;
   margin: 20px;
-  padding: 10px;
+  padding: 20px;
   text-decoration: none;
 
   &:hover{
