--- a/less/global.less
+++ b/less/global.less
@@ -123,7 +123,24 @@ p {
 
 .start-over {
     .tertiaryButtonStyle;
-    text-decoration: none; 
+    text-decoration: none;
+
+    @media @phone{
+      align-self: center;
+      width: 80%;
+      margin: 10px;
+      padding: 15px;
+      h4{
+        text-decoration: none; 
+        font-size: 4rem;
+      }
+
+      &:hover{
+        background-color: @darkblue;
+      }
+    }
+
+    }
 }
 
 
