--- a/less/global.less
+++ b/less/global.less
@@ -116,7 +116,6 @@ p {
       }
   }
 .restart {
-  align-self: flex-end;
   text-decoration: none;
 
 }
@@ -126,13 +125,13 @@ p {
     text-decoration: none;
 
     @media @phone{
-      align-self: center;
       width: 100%;
-      margin: 10px;
+      margin: 10px 0;
       padding: 15px;
+      align-self: center;
       h4{
         text-decoration: none;
-        font-size: 4rem;
+        font-size: 3.6rem;
       }
 
       &:hover{
@@ -147,5 +146,3 @@ p {
   .hidden {
     display: none;
   }
-
-}
