--- a/less/global.less
+++ b/less/global.less
@@ -89,6 +89,9 @@ p {
   h3{
     font-size: 3rem;
     font-weight: 650;
+    @media @phone {
+      font-size: 2.6rem; 
+    }
   }
   .character-action {
     .secondaryButtonStyle;
